# anthropomorphic-phantoms

./: .gitignore  LICENSE  README.md  pyproject.toml
ap/: fit_dyes_to_spectrum.py  generate_random_spectra.py  linear_unimxing.py  reproduce_paper.sh  tissue_mimicking_spectra.py  vessel_generation.py
ap/data/: icg.csv  load_icg_absorption.py  load_methylene_blue_absorption.py
ap/dye_analysis/: __init__.py  analyse_mixed_results.py  calculate_mean_spectra.py  measured_spectra.py  optimize_dye_concentrations.py  plot_raw_data.py  plot_spectra.py  potential_target_spectra.py  scattering_behaviour.py  tune_dye_composition.py
ap/examples/: combine_hsi_and_pat_examples.py  lu_example.py
ap/hsi_image_analysis/: example_hsi.py  investigate_hsi_images.py
ap/oxy_estimation/: estimate_oxy_hsi.py  estimate_oxy_pa.py  evaluate_oxy.py  generate_oxy_results_table.py  linear_unmixing.py  oxy_estimator_base.py
ap/pa_image_analysis/: check_for_saturations.py  check_minimal_movement.py  compare_paper_reconstructions.py  example_pat_images.py  plot_laser_energies.py  reconstruct_images.py  run_reconstruction.py  signal_correlation.py  time_series_analysis.py  visualization_app.py  visualize_raw_data.py
ap/us_image_analysis/: air_bubble_simulation.py  simulation_comparison_visualization.py  speed_of_sound_comparison.py  us_pa_comparison.py  vessel_diameter_comparison.py
ap/utils/: convert_patato_to_nrrd.py  convert_simpa_to_nrrd.py  correlate_spectrum_to_oxies.py  default_settings.py  dye_tissue_properties.py  example_visualization.py  generate_correlation_results_table.py  generate_forearm_constellation.py  generate_random_spectra.py  get_env_variable.py  io_iad_results.py  maximum_x_percent_values.py  postprocess_segmentation.py  recon_utils.py
ap/visualization/: background_properties.py  blood_proxies.py  oxy_levels.py
tmd/: generate_random_spectra.py  linear_unimxing.py  tissue_mimicking_spectra.py
tmd/data/: load_icg_absorption.py  load_methylene_blue_absorption.py  methylene_blue.csv
tmd/dye_analysis/: __init__.py  analyse_mixed_results.py  calculate_mean_spectra.py  optimize_dye_concentrations.py  plot_raw_data.py  plot_spectra.py  scattering_behaviour.py  tune_dye_composition.py
tmd/hsi_image_analysis/: example_hsi.py  investigate_hsi_images.py
tmd/oxy_estimation/: estimate_oxy_hsi.py  estimate_oxy_pa.py  linear_unmixing.py  oxy_estimator_base.py
(+32 files in other folders)
