[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ap"
version = "0.0.1"
description = "Anthropomorphic Phantoms"
authors = [
  { name="Kris K. Dreher", email="k.dreher@dkfz-heidelberg.de" },
    {name = "Division of Intelligent Medical Systems (IMSY), DKFZ"}
]
readme = "README.md"
requires-python = ">=3.8,<3.12"


# Requirements
dependencies = [
    "imsy-htc==0.0.14",
    "torch==2.1.2",
    "matplotlib==3.8",
    "numpy",
    "scipy",
    "pandas",
    "simpa",
    "pynrrd",
    "patato",
    "lazy-imports==0.3.1"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["*"]  # ["*"] by default

[project.urls]
Homepage = "https://github.com/IMSY-DKFZ/anthropomorphic-phantoms"
Repository = "https://github.com/IMSY-DKFZ/anthropomorphic-phantoms"
Paper = "DOI: LINK TODO"
